# master-brain

./: .gitignore  LICENSE  MB-COMMANDS.md  PAIDADS2LPS.md  PROMPTS.md  README.md
brains/youtube-brain/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SKILL.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml  uninstall.sh
brains/youtube-brain/.claude-plugin/: marketplace.json  plugin.json
brains/youtube-brain/.github/: PULL_REQUEST_TEMPLATE.md
brains/youtube-brain/.github/workflows/: ci.yml  (+1 more)
brains/youtube-brain/docs/: OPERATOR_KIT.md  PRODUCT_BOUNDARIES.md
brains/youtube-brain/references/: adapter-manifest.json  adapter-plan.md  current-requirements.md  market-research.md  product-spec.md  research-plan.md  safety-gates.md  source-ledger.json  source-manifest-template.md  source-map.md
brains/youtube-brain/schemas/: youtube-export-schema.json
brains/youtube-brain/scripts/: audit_brain.py  build_demo_vault.py  generate_vault_visuals.py  guide_next_action.py  import_youtube_export.py  ingest_source.py  lint_vault.py  package_release.py  render_brain_report.py  render_channel_report.py  scaffold_vault.py  synthesize_brain.py  synthesize_channel_health.py  synthesize_packaging_audit.py
brains/youtube-brain/specs/: youtube-brain.yaml
brains/youtube-brain/tests/: test_adapters.py  test_pipeline.py
brains/youtube-brain/wiki/: YouTube Brain Home.md  hot.md  index.md  log.md  overview.md
brains/youtube-brain/youtube_brain/: __init__.py  adapters.py  cli.py
(+413 files in other folders)
